<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.mirfanrafif.koskuv2.viewmodel.DetailPembayaranViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.pembayaran.DetailPembayaran">



        <TextView
            android:id="@+id/detailPembayaranTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/detail_pembayaran"
            style="@style/TextTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/DetailPembayaran_ubahButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailPembayaranTitle">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/idPembayaranLabel"
                    style="@style/TextTooltips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/id_pembayaran"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/DetailPembayaran_idPembayaranText"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@{viewModel.pembayaran._id}"
                    app:layout_constraintStart_toEndOf="@+id/idPembayaranLabel"
                    app:layout_constraintTop_toTopOf="@+id/idPembayaranLabel" />
                <TextView
                    android:id="@+id/bulanLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/bulan"
                    style="@style/TextTooltips"
                    app:layout_constraintStart_toStartOf="@+id/idPembayaranLabel"
                    app:layout_constraintTop_toBottomOf="@+id/idPembayaranLabel" />

                <TextView
                    android:id="@+id/DetailPembayaran_bulanText"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.pembayaran.bulan}"
                    app:layout_constraintStart_toStartOf="@+id/DetailPembayaran_idPembayaranText"
                    app:layout_constraintTop_toTopOf="@+id/bulanLabel" />

                <TextView
                    android:id="@+id/tahunLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/tahun"
                    style="@style/TextTooltips"
                    app:layout_constraintStart_toStartOf="@+id/bulanLabel"
                    app:layout_constraintTop_toBottomOf="@+id/bulanLabel" />

                <TextView
                    android:id="@+id/DetailPembayaran_tahunText"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.pembayaran.tahun.toString()}"
                    app:layout_constraintStart_toStartOf="@+id/DetailPembayaran_bulanText"
                    app:layout_constraintTop_toTopOf="@+id/tahunLabel" />

                <TextView
                    android:id="@+id/namaAnakKosPembayaranLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="@string/nama_anak_kos"
                    style="@style/TextTooltips"
                    app:layout_constraintStart_toStartOf="@+id/tahunLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tahunLabel" />

                <TextView
                    android:id="@+id/DetailPembayaran_namaAnakKos"
                    style="@style/TextContent"
                    android:text="@{viewModel.pembayaran.idanakkos.nama}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/DetailPembayaran_tahunText"
                    app:layout_constraintTop_toTopOf="@+id/namaAnakKosPembayaranLabel" />

                <TextView
                    android:id="@+id/asalAnakKosPembayaranLabel"
                    style="@style/TextTooltips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/asal"
                    app:layout_constraintStart_toStartOf="@+id/tahunLabel"
                    app:layout_constraintTop_toBottomOf="@+id/namaAnakKosPembayaranLabel" />

                <TextView
                    android:id="@+id/DetailPembayaran_asalAnakKos"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.pembayaran.idanakkos.asal}"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/DetailPembayaran_namaAnakKos"
                    app:layout_constraintTop_toTopOf="@+id/asalAnakKosPembayaranLabel" />

                <TextView
                    android:id="@+id/nohpAnakKosPembayaranLabel"
                    style="@style/TextTooltips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/no_hp"
                    app:layout_constraintStart_toStartOf="@+id/tahunLabel"
                    app:layout_constraintTop_toBottomOf="@+id/asalAnakKosPembayaranLabel" />

                <TextView
                    android:id="@+id/DetailPembayaran_nohpAnakKos"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.pembayaran.idanakkos.nohp}"
                    app:layout_constraintStart_toStartOf="@+id/DetailPembayaran_namaAnakKos"
                    app:layout_constraintTop_toTopOf="@+id/nohpAnakKosPembayaranLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/DetailPembayaran_ubahButton"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="Ubah"
            app:layout_constraintBottom_toTopOf="@+id/DetailPembayaran_hapusButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/DetailPembayaran_hapusButton"
            style="@style/RedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="Hapus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>