<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pengeluaran.DetailPengeluaran">


    <TextView
        android:id="@+id/DetailPengeluaran_namaPengeluaran"
        style="@style/TextContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/namaPengeluaraDetailLabel"
        app:layout_constraintTop_toTopOf="@+id/namaPengeluaraDetailLabel" />

    <TextView
        android:id="@+id/DetailPengeluaran_jenisPengeluaran"
        style="@style/TextContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/DetailPengeluaran_namaPengeluaran"
        app:layout_constraintTop_toBottomOf="@+id/DetailPengeluaran_namaPengeluaran" />

    <TextView
        android:id="@+id/DetailPengeluaran_Nominal"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/DetailPengeluaran_jenisPengeluaran"
        app:layout_constraintTop_toBottomOf="@+id/DetailPengeluaran_jenisPengeluaran" />

    <TextView
        android:id="@+id/detailPengeluaranLabel"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Detail Pengeluaran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/namaPengeluaraDetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/nama_pengeluaran"
        style="@style/TextTooltips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailPengeluaranLabel" />

    <TextView
        android:id="@+id/jenisPengeluaranLabel"
        style="@style/TextTooltips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_pengeluaran"
        app:layout_constraintStart_toStartOf="@+id/namaPengeluaraDetailLabel"
        app:layout_constraintTop_toTopOf="@+id/DetailPengeluaran_jenisPengeluaran" />

    <TextView
        android:id="@+id/DetailPengeluaran_NominalLabel"
        style="@style/TextTooltips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nominal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/DetailPengeluaran_Nominal" />

    <Button
        android:id="@+id/DetailPengeluaran_ubahButton"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Ubah"
        app:layout_constraintBottom_toTopOf="@+id/DetailPengeluaran_hapusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/DetailPengeluaran_hapusButton"
        style="@style/RedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Hapus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>